separate status bar module

--- a/src/ReactASPNetMVCDemo/Views/ContactUs/Index.cshtml
+++ b/src/ReactASPNetMVCDemo/Views/ContactUs/Index.cshtml
@@ -4,4 +4,5 @@
 
 <div id="contact-us" class="col-centered"></div>
 
-<script src='@Url.Content("~/Scripts/reactdemo/contactus.jsx")'></script>
+<script src='@Url.Content("~/Scripts/reactdemo/status.bar.jsx")'></script>
+<script src='@Url.Content("~/Scripts/reactdemo/contact.us.jsx")'></script>
