--- a/src/ReactASPNetMVCDemo/Content/Site.css
+++ b/src/ReactASPNetMVCDemo/Content/Site.css
@@ -33,3 +33,12 @@ textarea {
 }
 #contact-us {max-width: 500px; }
 .contactForm textarea { display: block; max-width: 490px; }
+#weather {
+    max-width: 500px;
+    min-height: 104px;
+}
+
+#weather .city { font-size: 24px; text-align: center;}
+#weather .temperature { text-align: center; font-size: 50px;}
+#weather .loading { font-size: 20px;}
+#weather .clock { font-size: 20px; }
