--- a/src/ReactASPNetMVCDemo/Views/Shared/_Layout.cshtml
+++ b/src/ReactASPNetMVCDemo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Contact Us", "Index", "ContactUs")</li>
+                    <li>@Html.ActionLink("Listing", "Listing", "ContactUs")</li>
                 </ul>
             </div>
         </div>
